# imgtrans-client

./: README.md  main.py  pyproject.toml  requirements.txt
imgtrans/: constant.py  draw.py  format.py  model.py  textbox.py
resources/: .gitignore  ui.glade
