[tool.poetry]
name = "imgtrans-client"
version = "0.1.0"
description = ""
authors = ["ging-dev <thanh1101dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "imgtrans_client"}]

[tool.poetry.dependencies]
python = "^3.10"
pgi = "^0.0.11.2"
pygobject = "^3.42.2"
pygobject-stubs = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
