[tool.poetry]
name = "imgtrans-client"
version = "0.1.0"
description = ""
authors = ["ging-dev <thanh1101dev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "imgtrans_client"}]

[tool.poetry.dependencies]
python = "^3.10"
pgi = "^0.0.11.2"
pygobject = "^3.42.2"
pygobject-stubs = "^1.0.0"
paddlepaddle = "2.4.0-rc0"
paddleocr = ">=2.6.0.3"
googletrans = "3.1.0a0"
wand = "^0.6.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.2"
jedi = "^0.18.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
